client/src/components/Styles/projects.css
/* ... */
#project-panel-tags {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding: 0 20px;
}

.project-panel-hover #quote:empty {
  display: none;
  margin: 0;
}

.project-contributor:hover {
  cursor: pointer;
}

/* IPAD/TABLET Hover support for touch-screen devices that specifically are not computers */
@media only screen and (any-hover: none) {

  /* In mobile version hover panel is always visible
     position is static so the grid uses the size of the hover panel
     original thumbnail image is hidden to avoid duplicate from hover panel*/
  .project-panel {
    height: auto;
    display: flex;
    flex-direction: column;
    align-self: baseline;
    z-index: 0;

    .project-image-container {
      flex-direction: column;
    }

    img {
      border-radius: 10px 10px 0px 0px;
      box-shadow: 2px 2px 10px 2px var(--shadow-color);
    }

    .project-panel-hover {
      visibility: visible;
      opacity: 1;
      position: static;
      height: auto;
      z-index: 1;
    }
  }

}

@media only screen and (max-width: 700px) {
  .projects-banner-outer {
    display: none;
  }
}

/* #endregion */



/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Project Creator and Editor Popup style rules
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/
*/
/* #region project-editor*/
#project-creator-editor {
  display: flex;
  flex-direction: column;
  max-width: 1121px;
  width: 100%;
  height: 869px;
  border: none;
  border-radius: 10px;
  color: var(--main-text);
  max-height: 100%;
  overflow: scroll;
}

@media (min-width: 1172px) {
  #project-creator-editor {
    width: 1120px;
  }
}

#project-editor-tabs {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 40px;
  margin-bottom: 10px;
}

.project-editor-tab {
  border: none;
  border-radius: 30px;
  padding: 10px 20px;
  background-color: rgba(0, 0, 0, 0) !important;
  color: var(--main-text);
  font-size: 1.2rem;
  font-weight: 500;
}

.project-editor-tab:hover,
.project-editor-tab-active,
#team-add-member-add-button,
#team-edit-member-save-button {
  background-color: var(--primary-color) !important;
  color: var(--invert-text);
  font-weight: 700;
}

.invalid-tab-alert {
  color: var(--error-delete-color);
  margin-left: 0.25rem;
  font-size: 1.15rem;
  line-height: 1;
}

#project-editor-save{
  display: block;
  align-self: center;
}

#project-editor-save,
#team-add-member-add-button,
#team-edit-member-save-button {
  border: none;
  border-radius: 30px;
  padding: 10px 20px;
  background-color: var(--primary-color) !important;
  color: var(--invert-text);
  font-size: 1.25rem;
  width: max-content;
  margin-left: auto;
  margin-right: auto;
  font-weight: 700;
  cursor: pointer;
  margin-top: -1%;
}

#project-editor-save,
#team-edit-member-cancel-button {
  margin-bottom: 28px;
}

#project-editor-save.disabled,
#project-editor-save:disabled,
#team-add-member-add-button:disabled,
#team-edit-member-save-button:disabled {
  opacity: 0.45;
  cursor: not-allowed;
}

#project-editor-confirm {
  border: none;
  border-radius: 30px;
  padding: 10px 20px;
  background-color: var(--primary-color) !important;
  color: var(--invert-text);
  font-size: 1.25rem;
  width: max-content;
  margin-left: auto;
  margin-right: auto;
  font-weight: 700;
  cursor: pointer;
}


#project-editor-save.profile-editor-save {
  margin-top: 37px;
  margin-bottom: 28px;
}

/* #project-editor-save:hover {
  color: var(--create-text) !important;
  background-color: var(--create-bg) !important;
  filter: drop-shadow(0px 5px 3px var(--shadow-color));
  transition: 0.25s;
} */

.share-button {
  font-size: 1rem;
  background: none;
  display: flex;
  position: relative;

  border-radius: 10px;

  align-items: center;
  margin: 0;
  flex-shrink: 0;

  color: var(--main-text);
  border: none;
  padding-top: 7px;
  padding-bottom: 7px;
}

#profile-menu-dropdown .share-button {
  width: 100%;
  gap: 17px;
}

.share-button:hover {
  background-color: var(--header-color) !important;
}

#project-info-dropdown .share-button {
  gap: 23.85px;
  text-align: right;
}

.share-response-popup {
  width: 100%;
  position: absolute;
  bottom: 2.25em;
  right: 0;

  padding: 6px 0;
  background-color: var(--shadow-color);
  color: var(--main-text);
  border-radius: 10px;
  text-align: center;
}

.share-response-popup .hidden {
  display: none;
}

.save-error-msg,
.save-error-msg-general {
  margin: auto;
}

.save-error-msg p,
.save-error-msg-general p,
#invalid-input-error p {
  margin: -20px 0 10px 0;
  text-align: center;
  font-size: 1.125rem;
  color: red;
}

#invalid-input-error {
  padding: 10px;
}

#project-editor-content {
  flex-grow: 1;
  margin: 35px 56px 30px 55px;
}

@media only screen and (max-width: 700px) {
  #project-editor-content {
    margin: 0 20px;
    margin-bottom: 20px;
  }
}

#project-editor-content label:not(.drop-area),
#project-team-add-member-title,
#team-add-member-cancel-button,
#project-team-edit-member-title,
#team-edit-member-cancel-button,
#project-team-delete-member-title,
#team-delete-member-cancel-button {
  color: var(--primary-color);
  background-color: transparent;
  font-size: 1.25rem;
  font-weight: 700;
  border: none;
}

#project-editor-content select {
  font-size: 1.5ch;
  color: var(--neutral-gray);
}

.italic {
  font-style: italic;
}

/* Project Editor/Creator General Tab */
#project-editor-content select,
#project-editor-general input,
#project-editor-content textarea,
#project-team-add-member-name input {
  border: 1px solid var(--border-color);
  border-radius: 10px;
  padding: 15px;
  flex-grow: 1;
  background-color: var(--bg-color);
  color: var(--main-text);
  font-size: 0.9375rem;
  outline: none;
}
/* ... */

